--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@conversationalcomponents/chat-window": "^1.5.12",
+    "axios": "^0.19.2",
     "cra-template": "1.0.3",
+    "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
